--- a/vibrate_detect/app/src/main/res/layout/activity_answer.xml
+++ b/vibrate_detect/app/src/main/res/layout/activity_answer.xml
@@ -6,9 +6,30 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.keisuken.vibrate_detect.AnswerActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="Input Answer" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 android:id="@+id/textView2"
-        android:textSize="64dp" />
+        android:textSize="32dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="101dp"
+        android:text="Button" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="123dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:layout_above="@+id/button3"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
