縦のバージョン終了
縦のバージョン終了
横と斜めの作成に入る
アイコン変更

--- a/vibrate_detect/app/src/main/res/layout/activity_main.xml
+++ b/vibrate_detect/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Trial:0" />
+        android:text="Trial:0"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/button2"
