--- a/vibrate_detect/app/src/main/res/layout/activity_answer.xml
+++ b/vibrate_detect/app/src/main/res/layout/activity_answer.xml
@@ -13,23 +13,176 @@ android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:id="@+id/button3"
+    <TextView
+        android:id="@+id/textView7"
+        android:text=""
+        android:textSize="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="101dp"
-        android:text="Button" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="123dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:layout_above="@+id/button3"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView7"
+        android:layout_marginBottom="101dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="1"
+                android:textSize="32dp"/>
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="4"
+                android:textSize="32dp"/>
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="7"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="Clear"
+                android:textSize="16dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="2"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button10"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="5"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button11"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="8"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="0"
+                android:textSize="32dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button13"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="3"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button14"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="6"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button15"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="9"
+                android:textSize="32dp" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="32dp"
+                android:layout_toStartOf="@+id/textView7"
+                android:layout_weight="1"
+                android:text="OK"
+                android:textSize="16dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
