--- a/vibrate_detect/app/src/main/res/layout/activity_mail.xml
+++ b/vibrate_detect/app/src/main/res/layout/activity_mail.xml
@@ -31,7 +31,8 @@
             android:layout_marginTop="145dp"
             android:text="TextView"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textSize="40sp" />
 
         <Button
             android:id="@+id/button4"
@@ -49,6 +50,7 @@
             android:text="TextView"
             android:layout_below="@+id/textView4"
             android:layout_alignStart="@+id/textView4"
-            android:layout_marginTop="106dp" />
+            android:layout_marginTop="106dp"
+            android:textSize="40sp" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
