--- a/vibrate_detect/app/src/main/res/layout/activity_start.xml
+++ b/vibrate_detect/app/src/main/res/layout/activity_start.xml
@@ -32,7 +32,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="120dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="35sp" />
 
         <RadioGroup
             android:id="@+id/RadioGroup"
@@ -47,13 +48,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
+                android:textSize="20sp"
                 android:text="left handed" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="right handed" />
+                android:text="right handed"
+                android:textSize="20sp" />
 
         </RadioGroup>
 
